# hebbs

./: .gitignore  CLA.md  Cargo.toml  LICENSE-APACHE  LICENSE-BSL  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml  nightly.yml  release.yml
benches/: baseline.json
crates/hebbs-bench/: Cargo.toml
crates/hebbs-bench/src/: dataset.rs  degradation.rs  latency.rs  main.rs  report.rs  resources.rs  scalability.rs
crates/hebbs-cli/: Cargo.toml
crates/hebbs-cli/src/: cli.rs  commands.rs  config.rs  connection.rs  error.rs  format.rs  lib.rs  main.rs  repl.rs  tokenizer.rs
crates/hebbs-cli/tests/: cli_parsing.rs  error_tests.rs  property_tests.rs  renderer_tests.rs
crates/hebbs-client/: Cargo.toml
crates/hebbs-client/src/: client.rs  convert.rs  error.rs  lib.rs  retry.rs  types.rs
crates/hebbs-client/tests/: property_tests.rs
crates/hebbs-core/: Cargo.toml
crates/hebbs-core/benches/: core_benchmarks.rs
crates/hebbs-core/src/: auth.rs  contradict.rs  decay.rs  engine.rs  error.rs  forget.rs  keys.rs  lib.rs  memory.rs  rate_limit.rs  recall.rs  reflect.rs  revise.rs  subscribe.rs  tenant.rs
crates/hebbs-core/tests/: contradiction_tests.rs  hebbian_demo.rs  integration_tests.rs  property_tests.rs  stress_tests.rs  system_tests.rs  tenant_isolation_tests.rs
crates/hebbs-embed/: Cargo.toml
crates/hebbs-embed/benches/: embed_benchmarks.rs
crates/hebbs-embed/src/: config.rs  error.rs  lib.rs  mock.rs  model.rs  normalize.rs  onnx.rs  traits.rs
crates/hebbs-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/hebbs-ffi/include/: hebbs.h
crates/hebbs-ffi/src/: convert.rs  error.rs  handle.rs  lib.rs  subscribe.rs
crates/hebbs-ffi/tests/: integration_test.rs
crates/hebbs-index/: Cargo.toml
crates/hebbs-index/benches/: index_benchmarks.rs
crates/hebbs-index/src/: associative.rs  error.rs  graph.rs  lib.rs  manager.rs  neighborhood.rs  temporal.rs
crates/hebbs-index/src/hnsw/: distance.rs  graph.rs  mod.rs  node.rs  params.rs
crates/hebbs-index/tests/: integration_tests.rs
crates/hebbs-proto/: Cargo.toml  build.rs
crates/hebbs-proto/src/: lib.rs
crates/hebbs-python/: .gitignore  Cargo.toml  pyproject.toml
crates/hebbs-python-native/: Cargo.toml
crates/hebbs-python/hebbs/: __init__.py  _exceptions.py  _native.py  _types.py
crates/hebbs-python/hebbs/aio/: __init__.py
crates/hebbs-python/hebbs/integrations/: __init__.py  crewai.py  langchain.py
crates/hebbs-python/src/: convert.rs  engine.rs  error.rs  lib.rs  subscribe.rs
crates/hebbs-python/tests/: test_hebbs.py
crates/hebbs-reflect/: Cargo.toml
crates/hebbs-reflect/benches/: reflect_benchmarks.rs
crates/hebbs-reflect/src/: cluster.rs  error.rs  lib.rs  llm.rs  pipeline.rs  prompt.rs  types.rs
crates/hebbs-server/: Cargo.toml
crates/hebbs-server/src/: config.rs  convert.rs  lib.rs  main.rs  metrics.rs  middleware.rs  rest.rs  server.rs
crates/hebbs-server/src/grpc/: health_service.rs  memory_service.rs  mod.rs  reflect_service.rs  subscribe_service.rs
crates/hebbs-server/tests/: grpc_integration.rs  rest_integration.rs
crates/hebbs-storage/: Cargo.toml
crates/hebbs-storage/src/: error.rs  lib.rs  memory_backend.rs  rocksdb_backend.rs  tenant.rs  traits.rs
crates/hebbs-vault/src/: config.rs  contradiction_writer.rs  ingest.rs  insight_writer.rs  lib.rs  manifest.rs  parser.rs  query.rs  query_log.rs  watcher.rs
crates/hebbs-vault/src/daemon/: client.rs  mod.rs  protocol.rs  vault_manager.rs
crates/hebbs-vault/src/panel/: mod.rs  routes.rs
crates/hebbs-vault/src/panel/static/: app.js  index.html  panel.css
docker/: .dockerignore  Dockerfile
hebbs-demo/: README.md  pyproject.toml
hebbs-demo/configs/: anthropic.toml  cost-optimized.toml  demo-quality.toml  local.toml  onnx-embed.toml  openai-embed.toml  openai-mini.toml  openai.toml
hebbs-demo/hebbs_demo/: __init__.py  agent.py  cli.py  config.py  display.py  llm_client.py  memory_manager.py  prompts.py
hebbs-demo/hebbs_demo/reports/: __init__.py  comparison.py  ergonomics.py
hebbs-demo/hebbs_demo/scenarios/: __init__.py  base.py  discovery_call.py  forget_gdpr.py  multi_entity.py  multi_session.py  objection_handling.py  reflect_learning.py  subscribe_realtime.py
hebbs-demo/tests/: conftest.py  test_config.py  test_display.py  test_llm_client.py  test_memory_extraction.py  test_scenarios.py
proto/: hebbs.proto
skills/hebbs/: SKILL.md
tests/: README.md
