[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hebbs-demo"
version = "0.1.0"
description = "AI Sales Intelligence Agent — HEBBS reference application"
requires-python = ">=3.9"
license = {text = "BSL-1.1"}
keywords = ["hebbs", "memory", "ai", "agent", "sales", "demo"]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "openai>=1.30",
    "anthropic>=0.25",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
hebbs-demo = "hebbs_demo.cli:main"

[tool.setuptools.packages.find]
include = ["hebbs_demo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_openai: requires OPENAI_API_KEY environment variable",
    "requires_anthropic: requires ANTHROPIC_API_KEY environment variable",
]
