[package]
name = "hebbs-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "BSL-1.1"
repository.workspace = true
description = "HEBBS interactive CLI client: REPL + one-shot commands"

[[bin]]
name = "hebbs-cli"
path = "src/main.rs"

[dependencies]
hebbs-proto = { path = "../hebbs-proto" }

tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio.workspace = true
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rustyline.workspace = true
comfy-table.workspace = true
owo-colors.workspace = true
dirs.workspace = true
ulid.workspace = true

tokio-stream = "0.1"

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
