[package]
name = "hebbs-python-native"
version = "0.3.2"
edition = "2021"
rust-version = "1.75"
license = "BSL-1.1"
repository = "https://github.com/hebbs-ai/hebbs"
description = "PyO3 native extension for embedded HEBBS engine (not the public SDK -- use 'hebbs' from PyPI instead)"

[lib]
name = "_hebbs_native"
crate-type = ["cdylib"]

[dependencies]
hebbs-core = { path = "../hebbs-core" }
hebbs-storage = { path = "../hebbs-storage" }
hebbs-embed = { path = "../hebbs-embed" }
hebbs-index = { path = "../hebbs-index" }
hebbs-reflect = { path = "../hebbs-reflect" }
pyo3 = { version = "0.24", features = ["extension-module"] }
serde_json = "1"
ulid = { version = "1", features = ["serde"] }
hex = "0.4"

[dev-dependencies]
tempfile = "3"
