[package]
name = "hebbs-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "BSL-1.1"
repository.workspace = true
description = "Python SDK native extension for HEBBS cognitive memory engine"

[lib]
name = "_hebbs_native"
crate-type = ["cdylib"]

[dependencies]
hebbs-core = { path = "../hebbs-core" }
hebbs-storage = { path = "../hebbs-storage" }
hebbs-embed = { path = "../hebbs-embed" }
hebbs-index = { path = "../hebbs-index" }
hebbs-reflect = { path = "../hebbs-reflect" }
pyo3 = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
