[package]
name = "hebbs-reflect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "BSL-1.1"
description = "Reflection pipeline for HEBBS — clustering, LLM-driven insight generation, and validation"

[dependencies]
hebbs-embed = { path = "../hebbs-embed" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
ureq.workspace = true
hex.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "reflect_benchmarks"
harness = false
