[package]
name = "hebbs-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "BSL-1.1"
repository.workspace = true
description = "HEBBS standalone server binary: gRPC + HTTP/REST"

[[bin]]
name = "hebbs-server"
path = "src/main.rs"

[dependencies]
hebbs-proto = { path = "../hebbs-proto" }
hebbs-core = { path = "../hebbs-core" }
hebbs-storage = { path = "../hebbs-storage" }
hebbs-embed = { path = "../hebbs-embed" }
hebbs-reflect = { path = "../hebbs-reflect" }
hebbs-index = { path = "../hebbs-index" }

tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
hyper-util.workspace = true
clap.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
parking_lot.workspace = true
hex.workspace = true

tokio-stream = "0.1"
http = "1"
http-body-util = "0.1"

[dev-dependencies]
tempfile.workspace = true
